# qryvanta

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RUST_STYLE_GUIDE.md  SECURITY.md  docker-compose.yml  justfile  package.json  plan.MD  pnpm-lock.yaml  turbo.json
apps/api/: Cargo.toml  package.json
apps/api/src/: api_config.rs  api_router.rs  api_services.rs  auth.rs  dev_seed.rs  dto.rs  error.rs  main.rs  middleware.rs  observability.rs  qrywell_sync.rs  redis_session_store.rs  state.rs
apps/api/src/api_config/: load.rs  tracing.rs
apps/api/src/api_router/: cors.rs  protected.rs  public_auth.rs  tests.rs  worker_internal.rs
apps/api/src/api_services/: database.rs  email.rs  redis.rs  sessions.rs  state_builder.rs
apps/api/src/auth/: bootstrap.rs  invite.rs  mfa.rs  mod.rs  passkey.rs  password.rs  session.rs  session_helpers.rs  step_up.rs
apps/api/src/dto/: apps.rs  auth.rs  common.rs  entities.rs  extensions.rs  mod.rs  portability.rs  publish.rs  runtime.rs  security.rs  workflows.rs
apps/api/src/error/: codes.rs  types.rs
apps/api/src/handlers/: apps.rs  entities.rs  extensions.rs  health.rs  mod.rs  portability.rs  publish.rs  runtime.rs  search.rs  security.rs  worker.rs  workflows.rs
apps/api/src/observability/: metrics.rs  render.rs
apps/api/src/state/: app_state.rs
apps/worker/: Cargo.toml
apps/worker/src/: config.rs  job_execution.rs  main.rs
crates/application/: Cargo.toml
crates/application/src/: app_ports.rs  app_service.rs  auth_event_service.rs  auth_token_service.rs  authorization_service.rs  contact_bootstrap_service.rs  extension_ports.rs  extension_service.rs  lib.rs  metadata_ports.rs  metadata_service.rs  mfa_service.rs  rate_limit_service.rs  security_admin_ports.rs  security_admin_service.rs  tenant_access_service.rs  user_service.rs  workflow_ports.rs  workflow_service.rs
crates/application/src/app_ports/: inputs.rs  permissions.rs  repository.rs  runtime_records.rs
crates/application/src/app_service/: access.rs  admin.rs  publish.rs  runtime.rs  sitemap.rs  tests.rs  workspace.rs
crates/application/src/auth_token_service/: consume.rs  email_verification.rs  invite.rs  password_reset.rs  tests.rs  token_crypto.rs
crates/application/src/authorization_service/: permissions.rs  runtime_fields.rs  surfaces.rs  tests.rs
crates/application/src/contact_bootstrap_service/: bootstrap.rs  payload.rs  schema.rs  tests.rs
crates/application/src/extension_ports/: execution.rs  repository.rs
crates/application/src/metadata_ports/: audit.rs  metadata_inputs.rs  metadata_repository.rs  runtime_query.rs  tenant.rs
crates/application/src/metadata_service/: definitions_business_rules.rs  definitions_components.rs  definitions_entities.rs  publish.rs  publish_access.rs  publish_defaults.rs  publish_validation.rs  runtime_access.rs  runtime_payload.rs  runtime_payload_calculation.rs  runtime_payload_normalization.rs  runtime_payload_option_sets.rs  runtime_payload_rules.rs  runtime_query.rs  runtime_query_links.rs  runtime_query_validation.rs  runtime_records_read.rs  runtime_records_write.rs  runtime_write.rs  tests.rs
crates/domain/: Cargo.toml
crates/domain/src/: app.rs  business_rule.rs  dashboard.rs  extension.rs  form.rs  lib.rs  metadata.rs  security.rs  user.rs  view.rs  workflow.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/migrations/: 0001_create_entity_definitions.sql  0002_create_tenants_and_sessions.sql  0003_create_auth_tables.sql  0004_create_rbac_and_audit_tables.sql  0005_create_users_and_auth_tokens.sql  0006_create_metadata_runtime_tables.sql  0007_create_apps_and_app_permissions.sql  0008_create_tenant_subject_contacts.sql  0009_create_runtime_security_controls.sql  0010_add_app_entity_presentation_fields.sql  0011_create_workflow_runtime_tables.sql  0012_add_workflow_canvas_steps.sql  0013_create_workflow_execution_jobs.sql  0014_create_workflow_worker_heartbeats.sql  0015_add_workflow_worker_partitions.sql  0016_add_workflow_job_lease_tokens.sql  0017_add_app_entity_forms_and_list_views.sql  0018_add_entity_enrichment_columns.sql  0019_add_entity_field_enrichment_columns.sql  0020_create_entity_option_sets.sql  0021_create_entity_forms.sql  0022_create_entity_views.sql  0023_create_app_sitemaps.sql  0024_create_entity_business_rules.sql  0025_add_entity_field_calculation_expression.sql  0026_create_published_form_and_view_snapshots.sql  0027_create_qrywell_sync_jobs.sql  0028_create_qrywell_sync_stats.sql  0029_create_qrywell_search_click_events.sql  0030_create_qrywell_search_query_events.sql  0031_add_workflow_attempt_step_traces.sql  0032_create_extension_definitions.sql  0033_add_pending_totp_enrollment_columns.sql  0034_add_user_session_revocation_timestamp.sql  0035_enable_metadata_runtime_rls.sql  0036_enable_access_control_rls.sql  0037_enable_search_and_contact_rls.sql  0038_enable_workflow_and_component_rls.sql  0039_enable_membership_rls.sql  0040_add_users_default_tenant_id.sql  (+10 more)
crates/infrastructure/src/: aes_secret_encryptor.rs  argon2_password_hasher.rs  audit_chain.rs  aws_kms_envelope_secret_encryptor.rs  console_email_service.rs  http_workflow_action_dispatcher.rs  in_memory_extension_repository.rs  in_memory_metadata_repository.rs  in_memory_workflow_queue_stats_cache.rs  lib.rs  postgres_app_repository.rs  postgres_audit_log_repository.rs  postgres_audit_repository.rs  postgres_auth_event_repository.rs  postgres_auth_token_repository.rs  postgres_authorization_repository.rs  postgres_extension_repository.rs  postgres_metadata_repository.rs  postgres_passkey_repository.rs  postgres_rate_limit_repository.rs  postgres_security_admin_repository.rs  postgres_tenant_repository.rs  postgres_tenant_rls.rs  postgres_user_repository.rs  postgres_workflow_repository.rs  redis_rate_limit_repository.rs  redis_workflow_queue_stats_cache.rs  redis_workflow_worker_lease_coordinator.rs  smtp_email_service.rs  tokio_workflow_delay_service.rs  totp_provider.rs  wasm_extension_runtime.rs
(+567 files in other folders)
