[workspace]
members = [
    "apps/api",
    "crates/core",
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock", "serde"] }
dotenvy = "0.15.7"
http = "1.2.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tower-sessions = "0.15.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
ts-rs = "10.1.0"
url = "2.5.7"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
