[workspace]
members = [
    "apps/api",
    "apps/worker",
    "crates/core",
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock", "serde"] }
dotenvy = "0.15.7"
http = "1.4.0"
reqwest = { version = "0.13.2", features = ["json"] }
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "time"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
ts-rs = "12.0.1"
url = "2.5.8"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
webauthn-rs = { version = "0.5.1", features = ["danger-allow-state-serialisation"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
