[package]
name = "qryvanta-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
qryvanta-application = { path = "../../crates/application" }
qryvanta-core = { path = "../../crates/core" }
qryvanta-domain = { path = "../../crates/domain" }
qryvanta-infrastructure = { path = "../../crates/infrastructure" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
tower-sessions-sqlx-store.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ts-rs.workspace = true
url.workspace = true
uuid.workspace = true
webauthn-rs.workspace = true

[lints]
workspace = true
