[package]
name = "qryvanta-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dotenvy.workspace = true
qryvanta-application = { path = "../../crates/application" }
qryvanta-core = { path = "../../crates/core" }
qryvanta-domain = { path = "../../crates/domain" }
qryvanta-infrastructure = { path = "../../crates/infrastructure" }
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
