[package]
name = "qryvanta-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
getrandom = "0.4"
qryvanta-core = { path = "../core" }
qryvanta-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["sync"] }

[lints]
workspace = true
