[package]
name = "qryvanta-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
qryvanta-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest = "1.6.0"

[lints]
workspace = true
